Fix: Table background color on mobile device.
- Fix: Table background color on mobile device.

--- a/public/assets/src/scss/components/_modal.scss
+++ b/public/assets/src/scss/components/_modal.scss
@@ -378,7 +378,7 @@
         max-width: 2048px; // Max: 2K - 40px
         overflow: hidden;
         border-radius: 5px;
-        background-color: white;
+        background-color: var(--adfy_compare_products_comparison_modal_bg_color);
 
         #addonify-compare-close-button {
 
